backend/trie_backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trie-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trie-backend
  template:
    metadata:
      labels:
        app: trie-backend
    spec:
      containers:
      - name: trie-backend
        image: bertha6651/trie_backend:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
