backend/trie_backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trie-backend-service
  namespace: default
spec:
  selector:
    app: trie-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
